Assets/CSS/style.css
/* Set font size and line height */
body {
    display: flex;
    flex-direction: column;
    line-height: 1.5;
    font-size: 16px;
    font-family: sans-serif;
}

/* set flexbox and styling for header */
header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgb(247, 65, 95);
    color: #fff;
    }

/* set styling for h1 */
h1 {
    margin: 1%;
    font-family: sans-serif;
    color: bisque;
}

/* set styling for h2 */
h2 {
    margin: 3%;
    font-size: 200%;
    );
}
/* Move nav away from right margin */
nav {
    padding-right: 2%;
}

/* styling for unordered list */
nav ul {
    display: flex;
    justify-content: space-between;
    min-width: 330px;
    list-style-type: none;
}

/* styling for header navigation links */
nav a {
    color:bisque;
    text-decoration: none;
}

 header1 {
     display: flex;
     justify-content:end;
     /* min-width: 330px; */
     background-image: url(/assets/images/header_background.png);
     background-repeat: no-repeat;
     background-size: 100%;
     padding-top: 5%;
      } 
header1 h2 {
    background-color: rgb(247, 65, 95);
    color: bisque;
}

